--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 .background{
 
     background: url(template.jpg) no-repeat top center ; 
-    background-size: cover;
+    background-size: contain;
     min-height: 1200px;
     width: 100%;
     max-width: 100%;
